--- a/welcome.css
+++ b/welcome.css
@@ -23,7 +23,8 @@ h3 {
 }
 /* Start Header */
 header nav {
-  background-color: #0079bf;
+  background-color: transparent;
+  transition: all .5s;
 }
 
 header nav a {
@@ -430,3 +431,162 @@ header nav div a.sig-up:hover {
   background-image: url('images/icon-subscribe.svg');
 }
 /* End Teams */
+
+/* Start Slider */
+.slider {
+  padding-bottom: 1rem;
+}
+.slider h3,
+.slider p {
+  margin: auto;
+}
+.slider h3 {
+  width: 100%;
+  margin-bottom: .5rem;
+}
+.slider p {
+  width: 50%;
+  margin-bottom: 1rem;
+}
+.slider #carousel {
+  display: flex;
+  justify-content: space-between;
+}
+.slider .boards {
+  order: 2;
+  position: relative;
+}
+.slider .board {
+  display: none;
+  position: relative;
+  overflow: hidden;
+}
+.slider .board p{
+  position: absolute;
+  bottom: -17px;
+  color: #fff;
+  background-color: rgba(48,54,76,0.8);
+  width: 100%;
+  padding: 15px;
+  padding-bottom: 45px;
+  border-radius: 0 0 1rem 1rem;
+}
+.slider .board img{
+  border-radius: 1rem;
+}
+.slider .board.active {
+  display: block;
+}
+#next, #prev {
+  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 15%);
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+#next:hover, #prev:hover {
+  background-color: #00C2E0;
+  color: #fff;
+}
+#next{
+  order: 3;
+  align-self: center;
+}
+#prev {
+  order: 1;
+  align-self: center;
+}
+.slider ul {
+  list-style: none;
+  position: absolute;
+  bottom: 0;
+  margin: auto;
+  left: 40%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 150px;
+  padding: 20px;
+}
+.slider ul li {
+  width: 10px;
+  height: 10px;
+  background-color: #00C2E0;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
+.slider ul li.selcted,
+.slider ul li:hover {
+  border: 7px solid #00C2E0;
+}
+/* End Slider */
+/* Start Features */
+#features {
+  padding-bottom: 1rem;
+}
+#features h3,
+#features p {
+  margin: auto;
+}
+#features h3 {
+  width: 100%;
+  margin-bottom: .5rem;
+}
+#features p {
+  width: 50%;
+  margin-bottom: 1rem;
+}
+#features p.small {
+  width: 100%;
+}
+#features .btn.btn-wrap {
+  white-space: nowrap;
+}
+#features p.app-store{
+  width: 100%;
+}
+#features p.app-store a img {
+  border-radius: .3em;
+  box-shadow: 0 1px 0 #a5acb0;
+  display: inline;
+  height: 44px;
+  margin: 0;
+  opacity: .8;
+  width: auto;
+}
+#features p.app-store a img:hover{
+  opacity: 1;
+}
+/* End Features  */
+/* Start Work Smarter */
+#bottom-gradient {
+  background: #fff;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(46%, #f7ecff), color-stop(74%, #d2ecff), to(#fff));
+  background: linear-gradient(to bottom, #fff 0%, #f7ecff 46%, #d2ecff 74%, #fff 100%);
+}
+#work-smarter .inner {
+  background: linear-gradient(180deg, #42548e 0%, #6b668c 100%);
+  border-radius: 12px;
+}
+#work-smarter .inner img {
+  max-height: 60px;
+}
+/* End Work Smarter */
+
+
+
+
+@media (min-width: 768px){
+  #get-started {
+      background-image: url('images/trellians-2x-2.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 1332px 393px;
+      height: 393px;
+  }
+
+}
