--- a/index-page/homepage.css
+++ b/index-page/homepage.css
@@ -176,7 +176,11 @@
     text-decoration: none;
     z-index: 0;
     color: #000;
+    font-size: 14px;
     padding: 5px;
+}
+.list-card span {
+  
 }
 .card-composer {
   border-radius: 3px;
@@ -207,7 +211,7 @@
   display: block;
   margin-bottom: 7px;
   max-width: 250px;
-
+  outline: none;
   min-height: 20px;
   position: relative;
   border: none;
