--- a/welcome.css
+++ b/welcome.css
@@ -577,7 +577,31 @@ header nav div a.sig-up:hover {
 }
 /* End Work Smarter */
 
+/* Start Footer */
+.footer {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 20px;
+  color: cornflowerblue;
+}
+.footer ul {
+  list-style: none;
+}
+.footer ul li {
+  display: inline-block;
+  margin: 10px 15px;
+}
 
+.footer ul li a {
+  text-decoration: none;
+  color: cornflowerblue;
+}
+.footer ul li a:hover {
+  text-decoration: underline;
+  color: blue;
+}
+/* End Footer */
 
 
 @media (min-width: 768px){
