--- a/index-page/homepage.css
+++ b/index-page/homepage.css
@@ -1,73 +1,65 @@
 * {
-  font-family: 'Ubuntu', sans-serif;
-}
-.bar-1{
-  background-color: #1967a3;
-  
-}
-.bar-1 svg, .bar-2 svg {
-  color: #fff;
-  
+	font-family: "Ubuntu", sans-serif;
 }
 
-.bar-1-btn, .bar-2-btn {
-  border-radius: 3px;
-    border: none;
-    text-decoration: none;
-    align-items: center;
-    background-color:hsla(0,0%,100%,.3);
-    box-shadow: none;
-    color: #fff;
-    /* display: flex; */
-
-    /* height: 32px; */
-    /* line-height: 32px; */
-    /* margin: 0 4px 0 0; */
-    /* padding: 0; */
-    height: 30px;
-
+.bar-1 {
+	background-color: #1967a3;
+}
+.bar-1 svg,
+.bar-2 svg {
+	color: #fff;
+}
+.bar-1-btn,
+.bar-2-btn {
+	border-radius: 3px;
+	border: none;
+	text-decoration: none;
+	align-items: center;
+	background-color: hsla(0, 0%, 100%, 0.3);
+	box-shadow: none;
+	color: #fff;
+	height: 30px;
+}
+.bar-2-btn {
+	margin-bottom: 5px;
 }
 .btn-no-text svg {
-  font-weight: 700;
-  display: flex;
-  align-items: center;
+	font-weight: 700;
+	display: flex;
+	align-items: center;
 }
-.btn-text , .svg-search{
-  position: relative;
-  bottom: 3px;
+.btn-text,
+.svg-search {
+	position: relative;
+	bottom: 3px;
 }
 .svg-search {
-  /* font-weight: 700; */
-  /* display: flex; */
-  right: 30px;
-  height: 100%;
-  bottom: 5px;
+	right: 30px;
+	height: 100%;
+	bottom: 5px;
 }
-.bar-1-btn span{
-  font-size: 14px;
-  padding-left: 3px;
-  font-weight: 700;
+.bar-1-btn span {
+	font-size: 14px;
+	padding-left: 3px;
+	font-weight: 700;
 }
-.bar-1-search{
-  background-color: hsla(0,0%,100%,.3);
-    border-radius: 3px;
-    border: none;
-    box-shadow: none;
-    box-sizing: border-box;
-    /* color: hsla(0,0%,100%,.5); */
-    color: #fff;
-    /* font-size: 13px; */
-    height: 30px;
-    line-height: 19px;
-    margin: 0;
-    outline: none;
-    padding-left: 8px;
-    padding-right: 30px;
-    transition: width .15s;
-    width: 184px;
-
-    position: relative;
-    bottom: 5px;
+.bar-1-search {
+	background-color: hsla(0, 0%, 100%, 0.3);
+	border-radius: 3px;
+	border: none;
+	box-shadow: none;
+	box-sizing: border-box;
+	color: #fff;
+	height: 30px;
+	line-height: 19px;
+	margin: 0;
+	outline: none;
+	padding-left: 8px;
+	padding-right: 30px;
+	transition: width 0.15s;
+	width: 184px;
+	position: relative;
+	bottom: 5px;
 }
 .trello-logo {
 	background-image: url("https://a.trellocdn.com/prgb/dist/images/header-logo-2x.01ef898811a879595cea.png");
@@ -78,160 +70,162 @@
 	display: inline-block;
 	height: 30px;
 	width: 80px;
-  color: aqua;
-  opacity: .5;
+	color: aqua;
+	opacity: 0.5;
 }
-/* .editBtn{
-  height: 30px;
-  display: flex;
-  align-items: center;
-} */
-
 
 /* BAR 2 */
 .bar-2 {
-  background-color: #1f79bf;
-  /* height: calc(100vh - 40px); */
-  min-height: calc(100vh - 40px);
+	background-color: #1f79bf;
+	min-height: calc(100vh - 40px);
 }
 .bar-2 .divider {
-    border-left: 1px solid hsla(0,0%,100%,.24);
-    height: 16px;
-    margin: 8px 8px 12px 4px;
+	border-left: 1px solid hsla(0, 0%, 100%, 0.24);
+	height: 16px;
+	margin: 8px 8px 12px 4px;
 }
 .free-span {
-  background-color: rgba(255,255,255, .5);
-  font-size: 12px;
-    background: hsla(0,0%,100%,.2);
-    border-radius: 12px;
-    margin-left: 8px;
-    padding: 2px 6px;
-
+	background-color: rgba(255, 255, 255, 0.5);
+	font-size: 12px;
+	background: hsla(0, 0%, 100%, 0.2);
+	border-radius: 12px;
+	margin-left: 8px;
+	padding: 2px 6px;
 }
 .bar-2-btn span {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 /* CARDS */
 .card-wrapper {
-  width: 272px;
-  /* margin: 0 4px; */
-  height: 100%;
-  /* box-sizing: border-box; */
-  display: inline-block;
-  vertical-align: top;
-  /* white-space: nowrap; */
+	width: 272px;
+	height: 100%;
+	display: inline-block;
+	vertical-align: top;
 }
 .card {
-  background-color: #ebecf0;
-    border-radius: 3px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    max-height: 100%;
-    /* position: relative; */
-    white-space: normal;
+	background-color: #ebecf0;
+	border-radius: 3px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	max-height: 100%;
+	white-space: normal;
 }
 .card-headerr {
-  position: relative;
-    min-height: 20px;
-    display: flex;
-    justify-content: space-between;
-    /* align-content: center; */
-    padding: 10px 8px;
-    position: relative;
+	position: relative;
+	min-height: 20px;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 8px;
+	position: relative;
 }
 
 .card h2 {
-  font-weight: 600;
-  font-size: 16px;
-  
+	font-weight: 600;
+	font-size: 16px;
 }
 .card svg {
-  color: #788397;
+	color: #788397;
 }
 .card a:hover {
-  text-decoration: none;
+	text-decoration: none;
 }
 .list-cards {
-  flex: 1 1 auto;
-    margin-bottom: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    margin: 0 4px;
-    padding: 0 4px;
-    z-index: 1;
-    min-height: 0;
+	flex: 1 1 auto;
+	margin-bottom: 0;
+	overflow-y: auto;
+	overflow-x: hidden;
+	margin: 0 4px;
+	padding: 0 4px;
+	z-index: 1;
+	min-height: 0;
 }
 .list-card {
-  background-color: #fff;
-    border-radius: 3px;
-    box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
-    cursor: pointer;
-    display: block;
-    margin-bottom: 7px;
-    max-width: 300px;
-    min-height: 20px;
-    position: relative;
-    text-decoration: none;
-    z-index: 0;
-    color: #000;
-    font-size: 14px;
-    padding: 5px;
-}
-.list-card span {
-  
+	background-color: #fff;
+	border-radius: 3px;
+	box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
+	cursor: pointer;
+	display: block;
+	margin-bottom: 7px;
+	max-width: 300px;
+	min-height: 20px;
+	position: relative;
+	text-decoration: none;
+	z-index: 0;
+	color: #000;
+	font-size: 14px;
+	padding: 5px;
 }
 .card-composer {
-  border-radius: 3px;
-    color: #5e6c84;
-    display: block;
-    /* flex: 1 0 auto; */
-    margin: 2px 0 8px 8px;
-    padding: 4px 8px;
-    position: relative;
+	border-radius: 3px;
+	color: #5e6c84;
+	display: block;
+	margin: 2px 0 8px 8px;
+	padding: 4px 8px;
+	position: relative;
 }
 .add-new-list {
-  /* padding-right: 100px; */
-  width: 100%;
+	width: 100%;
 }
 .add-new-list svg {
-  position: relative;
-  bottom: 2px;
+	position: relative;
+	bottom: 2px;
 }
 
 .new-task {
-  display: none;
+	display: none;
 }
 .new-task textarea {
-  /* background-color: #fff; */
-  border-radius: 3px;
-  box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
-  /* cursor: pointer; */
-  display: block;
-  margin-bottom: 7px;
-  max-width: 250px;
-  outline: none;
-  min-height: 20px;
-  position: relative;
-  border: none;
-  margin: auto;
-  margin-bottom: 7px;
-  text-decoration: none;
-  z-index: 0;
-  color: #000;
-  padding: 5px;
+	border-radius: 3px;
+	box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
+	display: block;
+	margin-bottom: 7px;
+	max-width: 250px;
+	outline: none;
+	min-height: 20px;
+	position: relative;
+	border: none;
+	margin: auto;
+	margin-bottom: 7px;
+	text-decoration: none;
+	z-index: 0;
+	color: #000;
+	padding: 5px;
 }
 .add-card-btn {
-  background-color: #5aac44;
-  width: auto;
-  padding: 0 15px;
-  margin: 5px 10px;
-  font-size: 14px;
+	background-color: #5aac44;
+	width: auto;
+	padding: 0 15px;
+	margin: 5px 10px;
+	font-size: 14px;
 }
 .add-card-actions svg {
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 4px;
-  
+	font-size: 20px;
+	font-weight: 700;
+	margin-bottom: 4px;
+}
+
+@media screen and (max-width: 882px) {
+	.bar-1-search,
+	#searchIcon {
+		display: none;
+	}
+}
+@media screen and (max-width: 464px) {
+	#boards-btn {
+		display: none;
+	}
+}
+@media screen and (max-width: 608px) {
+	.card-wrapper {
+		width: 100%;
+	}
+	.list-card {
+		max-width: 100%;
+	}
+	.new-task textarea {
+		max-width: 95% !important;
+		width: 100%;
+	}
 }
