--- a/Signup Page/signup.css
+++ b/Signup Page/signup.css
@@ -181,6 +181,12 @@ margin-bottom: 16px;
   position: relative;
   text-align: center;
 }
+.error-message{
+  background: #eb5a46;
+    color: #fbedeb;
+    font-size: 16px;
+  line-height: 1.5;
+  }
 
 /********************** common classes ***************/
 .hidden{
