--- a/index-page/ahmed-changes/homepage.css
+++ b/index-page/ahmed-changes/homepage.css
@@ -96,9 +96,22 @@
 	font-size: 14px;
 }
 
+/* for horizontal navigation later */
+/* #board{
+	white-space: nowrap;
+} */
+
 /* CARDS */
 #listItems{
 	display: inline-block
+}
+.delete-list{
+	background: rgba(0,0,0,0);
+	border: none;
+}
+.delete-list svg {
+	width: 18px;
+	height: 18px;
 }
 .card-wrapper {
 	width: 272px;
@@ -119,9 +132,13 @@
 	position: relative;
 	min-height: 20px;
 	display: flex;
+	align-items: center;
 	justify-content: space-between;
 	padding: 10px 8px;
 	position: relative;
+}
+.card-header h2 {
+	margin-bottom: 0;
 }
 
 .card h2 {
@@ -258,4 +275,6 @@ background-color: #ffffff52;
 	font-size: 20px;
 	font-weight: 700;
 	margin-bottom: 4px;
+	position: relative;
+	top: 3px;
 }
