--- a/index-page/mario-changes/homepage.css
+++ b/index-page/mario-changes/homepage.css
@@ -15,10 +15,21 @@
 	border: none;
 	text-decoration: none;
 	align-items: center;
-	background-color: hsla(0, 0%, 100%, 0.3);
+	/* background-color: hsla(0, 0%, 100%, 0.3); */
+	background-color: rgba(255, 255, 255, 0.3);
 	box-shadow: none;
 	color: #fff;
 	height: 30px;
+	transition: all .4s ease-out;
+}
+.bar-1-btn:focus,
+.bar-2-btn:focus{
+	border: none;
+	outline: none;
+}
+.bar-1-btn:hover,
+.bar-2-btn:hover{
+	background-color: rgba(255, 255, 255, 0.4);
 }
 .bar-2-btn {
 	margin-bottom: 5px;
@@ -95,6 +106,13 @@
 .bar-2-btn span {
 	font-size: 14px;
 }
+#favourite svg{
+	position: relative;
+	bottom: 2px;
+}
+#favourite:hover svg{
+	fill: yellow;
+}
 
 /* for horizontal navigation later */
 /* #board{
@@ -128,6 +146,14 @@
 	max-height: 100%;
 	white-space: normal;
 	transition: all .3s;
+}
+.card-headerr {
+	position: relative;
+	min-height: 20px;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 8px;
+	position: relative;
 }
 .card a {
 	transition: all .3s;
