--- a/index-page/mario-changes/homepage.css
+++ b/index-page/mario-changes/homepage.css
@@ -1,6 +1,129 @@
 * {
 	font-family: "Ubuntu", sans-serif;
 }
+/* Start Modials Boads */
+.container-new-board {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .4);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	display: none;
+}
+.new-board-modial {
+	width: 350px;
+	height: 250px;
+	padding: 30px;
+	color: #fff;
+	position: relative;
+}
+.new-board-modial .board-title{
+	background-color: blue;
+	padding: 5px;
+}
+.new-board-modial .board-title input{
+	background-color: #00000024;
+	border: none;
+	outline: none;
+	color: white;
+	padding: 5px 8px;
+	border-radius: 6px;
+}
+.new-board-modial .board-title input::placeholder {
+	color: rgb(228, 228, 228);
+}
+.new-board-modial .board-style {
+	padding: 10px 0px 10px 10px;
+	display: flex;
+}
+.new-board-modial ul {
+	list-style: none;
+	padding-left: 0;
+	margin-left: 20px;
+}
+.new-board-modial ul li {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	background-color: blue;
+	cursor: pointer;
+	border-radius: 6px;
+}
+.new-board-modial ul li.red {
+	background-color: red;
+}
+.new-board-modial ul li.blue {
+	background-color: blue;
+}
+.new-board-modial ul li.orange {
+	background-color: orange;
+}
+.new-board-modial ul li.purple {
+	background-color: purple;
+}
+.new-board-modial button.close-modial{
+	background-color: transparent;
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	border: none;
+	color: white;
+
+}
+.new-board-modial button.add-board {
+	background-color: green;
+	border: none;
+	outline: none;
+	color: white;
+	padding: 8px 8px;
+	border-radius: 5px;
+	margin-left: 10px;
+	cursor: pointer;
+
+}
+/* Start Slid Menu */
+.slid-menu-board {
+	position: absolute;
+	width: 200px;
+	top: 30px;
+	left: 15px;
+	background: #ebebeb;
+	z-index: 100;
+	border-radius: 4px;
+	display: none;
+}
+.slid-menu-board .slid-board {
+	border-bottom: 1px solid #f6f6f6;
+	padding: 5px;
+	position: relative;
+}
+.slid-menu-board .slid-board h4{
+	font-size: 15px;
+}
+.close-slid-menu {
+	position: absolute;
+	top: 0;
+	right: 0;
+	background: transparent;
+	border: none;
+	outline: none;
+}
+.slid-menu-board .create-new-board {
+	padding: 5px;
+}
+.slid-menu-board .create-new-board button {
+	background-color: transparent;
+	border: transparent;
+	outline: none;
+}
+.slid-menu-board .create-new-board button:hover {
+	text-decoration: underline;
+}
 
 .bar-1 {
 	background-color: #1967a3;
@@ -83,6 +206,17 @@
 	width: 80px;
 	color: aqua;
 	opacity: 0.5;
+}
+.userImg {
+	width: 30px;
+	height: 30px;
+	background-color: red;
+	border-radius: 50%;
+	color: white;
+	text-align: center;
+	line-height: 30px;
+	font-size: 15px;
+	font-weight: 600;
 }
 
 /* BAR 2 */
