--- a/index-page/homepage.css
+++ b/index-page/homepage.css
@@ -114,6 +114,14 @@
 	font-size: 15px;
 	margin: 0;
 }
+.slid-menu-board .slid-board button.boardLink {
+	background: none;
+	border: none;
+	color: white;
+	width: 100%;
+	text-align: left;
+	transition: all .4s;
+}
 .close-slid-menu {
 	position: absolute;
 	top: 0;
