--- a/welcome.css
+++ b/welcome.css
@@ -461,6 +461,9 @@ header nav div a.sig-up:hover {
   position: relative;
   overflow: hidden;
 }
+.slider .board img {
+  max-width: 100%;
+}
 .slider .board p{
   position: absolute;
   bottom: -17px;
@@ -613,4 +616,27 @@ header nav div a.sig-up:hover {
       height: 393px;
   }
 
+}
+
+
+@media (max-width: 992px){
+  .hero h1 {
+    font-size: 2rem;
+  }
+  .hero form input[type="submit"] {
+    width: 255px;
+  }
+}
+
+@media (max-width: 768px){
+  .hero h1 {
+    font-size: 2rem;
+  }
+  .hero form {
+    flex-wrap: wrap;
+  }
+  .hero form input[type="submit"] {
+    margin-top: 20px;
+    width: 376px;
+  }
 }
