--- a/index-page/homepage.scss
+++ b/index-page/homepage.scss
@@ -100,53 +100,57 @@
 	border-radius: 4px;
 	display: none;
 	margin-top: 5px;
-	/* border: 0px 1px 1px 1px solid black; */
 	border: 1px solid white;
 	padding: 5px;
 	opacity: .8;
 	transition: background-color .8s;
-}
-.slid-menu-board .slid-board {
-	border-bottom: 1px solid white;
-	padding: 5px;
-	position: relative;
-	display: flex;
-	align-items: center;
-}
-.slid-menu-board .slid-board h4{
-	font-size: 15px;
-	margin: 0;
-}
-.slid-menu-board .slid-board button.boardLink {
-	background: none;
-	border: none;
-	color: white;
-	width: 100%;
-	text-align: left;
-	transition: fastTransition();
-}
-.close-slid-menu {
-	position: absolute;
-	top: 0;
-	right: 0;
-	background: transparent;
-	border: none;
-	outline: none;
-	color: white;
-}
-.slid-menu-board .create-new-board {
-	padding: 5px;
-}
-.slid-menu-board .create-new-board button {
-	background-color: transparent;
-	border: transparent;
-	outline: none;
-	color: white;
-}
-.slid-menu-board .create-new-board button:hover {
-	text-decoration: underline;
+
+  .slid-board {
+    border-bottom: 1px solid white;
+    padding: 5px;
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    h4{
+      font-size: 15px;
+      margin: 0;
+    }
+    .close-slid-menu {
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: transparent;
+      border: none;
+      outline: none;
+      color: white;
+    }
+    button.boardLink {
+      background: none;
+      border: none;
+      color: white;
+      width: 100%;
+      text-align: left;
+      transition: fastTransition();
+    }
+  }
+  .create-new-board {
+    padding: 5px;
+
+    button {
+      background-color: transparent;
+      border: transparent;
+      outline: none;
+      color: white;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
 
+// Start bars
 .bar-1 {
 	background-color: #1967a3;
 }
@@ -156,10 +160,10 @@
 .bar-1,
 .bar-2{
 	transition: background-color .8s;
-}
-.bar-1 svg,
-.bar-2 svg {
-	color: #fff;
+
+  svg{
+    color: #fff;
+  }
 }
 .bar-1-btn,
 .bar-2-btn {
@@ -173,19 +177,24 @@
 	color: #fff;
 	height: 30px;
 	transition: fastTransition() ease-out;
+
+  &:focus{
+    border: none;
+    outline: none;
+  }
+  &:hover{
+    background-color: rgba(255, 255, 255, 0.4);
+  }
 }
-.bar-1-btn:focus,
-.bar-2-btn:focus{
-	border: none;
-	outline: none;
-}
-.bar-1-btn:hover,
-.bar-2-btn:hover{
-	background-color: rgba(255, 255, 255, 0.4);
+.bar-1-btn{
+  span {
+    font-size: 14px;
+    padding-left: 3px;
+    font-weight: 700;
+  }
 }
 .bar-2-btn {
 	margin-bottom: 8px;
-	/* padding-bottom: 4px; */
 }
 .btn-no-text svg {
 	font-weight: 700;
@@ -202,11 +211,7 @@
 	height: 100%;
 	bottom: 5px;
 }
-.bar-1-btn span {
-	font-size: 14px;
-	padding-left: 3px;
-	font-weight: 700;
-}
+
 .bar-1-search {
 	background-color: hsla(0, 0%, 100%, 0.3);
 	border-radius: 3px;
@@ -224,14 +229,24 @@
 	width: 184px;
 	position: relative;
 	bottom: 5px;
+
+  @media screen and (max-width: 882px) {
+    display: none;
+  }
+}
+@media screen and (max-width: 882px) {
+	#searchIcon {
+		display: none;
+	}
 }
 .test-btn{
 	border: 1px solid gainsboro;
 	background: #e76f51;
 	display: none;
-}
-.test-btn:hover{
-	background: #e65632
+
+  &:hover{
+    background: #e65632
+  }
 }
 .trello-logo {
 	background-image: url("https://a.trellocdn.com/prgb/dist/images/header-logo-2x.01ef898811a879595cea.png");
@@ -261,15 +276,16 @@
 	transition: fastTransition();
 	cursor: pointer;
 	overflow: hidden;
-}
-.userImg:first-of-type{
-	background-color: rgb(251, 133, 0);
-}
-.userImg:nth-of-type(2){
-	background-color: rgb(217, 4, 41);
-}
-.userImg:last-of-type{
-	background-color: #1967a3;
+
+  &:first-of-type{
+    background-color: rgb(251, 133, 0);
+  }
+  &:nth-of-type(2){
+    background-color: rgb(217, 4, 41);
+  }
+  &:last-of-type{
+    background-color: #1967a3;
+  }
 }
 
 #active-user{
@@ -286,14 +302,15 @@
 	margin-right: 10px;
 	padding-right: 15px;
 	cursor: pointer;
-}
-#team-members span#members-tag {
-	margin-left: 10px;
-	color: white;
-	font-weight: bold;
-}
-#team-members .userImg:first-of-type{
-	margin-left: 0;
+
+  span#members-tag {
+    margin-left: 10px;
+    color: white;
+    font-weight: bold;
+  }
+  .userImg:first-of-type{
+    margin-left: 0;
+  }
 }
 .initials{
 	position: relative;
@@ -314,7 +331,7 @@
   position: absolute;
   z-index: 18888888;
   top: -2px;
-  left: 66%;
+  left: 57%;
   margin-left: -60px;
 }
 
@@ -326,100 +343,97 @@
 .bar-2 {
 	background-color: #1f79bf;
 	min-height: calc(100vh - 40px);
-}
-.bar-2 .divider {
-	border-left: 1px solid hsla(0, 0%, 100%, 0.24);
-	height: 16px;
-	margin: 8px 8px 12px 4px;
-}
-.free-span {
-	background-color: rgba(255, 255, 255, 0.5);
-	font-size: 12px;
-	background: hsla(0, 0%, 100%, 0.2);
-	border-radius: 12px;
-	margin-left: 8px;
-	padding: 2px 6px;
-}
-.bar-2-btn span {
-	font-size: 14px;
-}
-/* #favourite svg{
-	position: relative;
-	bottom: 2px;
-}
-#favourite:hover svg{
-	fill: yellow;
-} */
 
-/* for horizontal navigation later */
-/* #board{
-	white-space: nowrap;
-} */
+  .divider {
+    border-left: 1px solid hsla(0, 0%, 100%, 0.24);
+    height: 16px;
+    margin: 8px 8px 12px 4px;
+  }
+  .free-span {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 12px;
+    background: hsla(0, 0%, 100%, 0.2);
+    border-radius: 12px;
+    margin-left: 8px;
+    padding: 2px 6px;
+  }
+  .bar-2-btn {
+    span{
+      font-size: 14px;
+    }
+  }
+}
 
 /* CARDS */
 #listItems{
-	display: inline-block
+	display: inline-block;
+
+  @media screen and (max-width: 608px) {
+    width: 100%;
+  }
 }
 .delete-list{
 	background: rgba(0,0,0,0);
 	border: none;
-}
-.delete-list svg {
-	width: 18px;
-	height: 18px;
+
+  svg{
+    width: 18px;
+    height: 18px;
+  }
 }
 .card-wrapper {
 	width: 272px;
 	height: 100%;
 	display: inline-block;
 	vertical-align: top;
-}
-.card {
-	background-color: #ebecf0;
-	border-radius: 3px;
-	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
-	max-height: 100%;
-	white-space: normal;
-	transition: all .3s;
-}
-.card-headerr {
-	position: relative;
-	min-height: 20px;
-	display: flex;
-	justify-content: space-between;
-	padding: 10px 8px;
-	position: relative;
-}
-.card a {
-	transition: all .3s;
-}
-.card-header {
-	position: relative;
-	min-height: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 10px 8px;
-	position: relative;
-}
-.card-header h2 {
-	margin-bottom: 0;
+
+  .card {
+    background-color: #ebecf0;
+    border-radius: 3px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+    white-space: normal;
+    transition: all .3s;
+
+    .card-header {
+      position: relative;
+      min-height: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 8px;
+      position: relative;
+      
+      h2 {
+        margin-bottom: 0;
+      }
+    }
+    a {
+      transition: all .3s;
+    }
+    h2 {
+      font-weight: 600;
+      font-size: 16px;
+    }
+    svg {
+      color: #788397;
+    }
+    a:hover {
+      text-decoration: none;
+      background-color: whitesmoke;
+      color: black;
+    }
+    .card-bottom {
+      transition: all 0.3s;
+    }
+  }
+  @media screen and (max-width: 608px) {
+    width: 100%;
+  }
 }
 
-.card h2 {
-	font-weight: 600;
-	font-size: 16px;
-}
-.card svg {
-	color: #788397;
-}
-.card a:hover {
-	text-decoration: none;
-	background-color: whitesmoke;
-	color: black;
-}
 .list-cards {
 	flex: 1 1 auto;
 	margin-bottom: 0;
@@ -429,22 +443,27 @@
 	padding: 0 4px;
 	z-index: 1;
 	min-height: 0;
-}
-.list-card {
-	background-color: #fff;
-	border-radius: 3px;
-	box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
-	cursor: pointer;
-	display: block;
-	margin-bottom: 7px;
-	max-width: 300px;
-	min-height: 20px;
-	position: relative;
-	text-decoration: none;
-	z-index: 0;
-	color: #000;
-	font-size: 14px;
-	padding: 5px;
+
+  .list-card {
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
+    cursor: pointer;
+    display: block;
+    margin-bottom: 7px;
+    max-width: 300px;
+    min-height: 20px;
+    position: relative;
+    text-decoration: none;
+    z-index: 0;
+    color: #000;
+    font-size: 14px;
+    padding: 5px;
+
+    @media screen and (max-width: 608px) {
+      max-width: 100%;
+    }
+  }
 }
 .card-composer {
 	border-radius: 3px;
@@ -456,31 +475,38 @@
 }
 .add-new-list {
 	width: 100%;
-}
-.add-new-list svg {
-	position: relative;
-	bottom: 2px;
+
+  svg {
+    position: relative;
+    bottom: 2px;
+  }
 }
 
 .new-task {
 	display: none;
-}
-.new-task textarea {
-	border-radius: 3px;
-	box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
-	display: block;
-	margin-bottom: 7px;
-	max-width: 250px;
-	outline: none;
-	min-height: 20px;
-	position: relative;
-	border: none;
-	margin: auto;
-	margin-bottom: 7px;
-	text-decoration: none;
-	z-index: 0;
-	color: #000;
-	padding: 5px;
+
+  textarea {
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
+    display: block;
+    margin-bottom: 7px;
+    max-width: 250px;
+    outline: none;
+    min-height: 20px;
+    position: relative;
+    border: none;
+    margin: auto;
+    margin-bottom: 7px;
+    text-decoration: none;
+    z-index: 0;
+    color: #000;
+    padding: 5px;
+
+    @media screen and (max-width: 608px) {
+      max-width: 95% !important;
+		  width: 100%;
+    }
+  }
 }
 .add-card-btn {
 	background-color: #5aac44;
@@ -495,30 +521,10 @@
 	margin-bottom: 4px;
 }
 
-@media screen and (max-width: 882px) {
-	.bar-1-search,
-	#searchIcon {
-		display: none;
-	}
-}
+
 @media screen and (max-width: 464px) {
 	#boards-btn {
 		display: none;
-	}
-}
-@media screen and (max-width: 608px) {
-	#listItems {
-		width: 100%;
-	}
-	.card-wrapper {
-		width: 100%;
-	}
-	.list-card {
-		max-width: 100%;
-	}
-	.new-task textarea {
-		max-width: 95% !important;
-		width: 100%;
 	}
 }
 #addListBtn:hover{
@@ -526,34 +532,36 @@ background-color: #ffffff52;
 }
 .add-new-list {
 	width: 100%;
-}
-.add-new-list svg {
-	position: relative;
-	bottom: 2px;
+
+  svg {
+    position: relative;
+    bottom: 2px;
+  }
 }
 
 .new-list {
 	display: none;
+
+  .add-card-actions{
+
+    svg{
+      font-size: 20px;
+      font-weight: 700;
+      margin-bottom: 4px;
+      position: relative;
+      top: 3px;
+    }
+    .add-list-btn {
+      background-color: #5aac44;
+      width: auto;
+      padding: 0 15px;
+      margin: 5px 10px;
+      font-size: 14px;
+    }
+  }
 }
 
-.add-list-btn {
-	background-color: #5aac44;
-	width: auto;
-	padding: 0 15px;
-	margin: 5px 10px;
-	font-size: 14px;
-}
-.add-list-actions svg {
-	font-size: 20px;
-	font-weight: 700;
-	margin-bottom: 4px;
-	position: relative;
-	top: 3px;
-}
-
-.card-bottom {
-	transition: all 0.3s;
-}
+// drag n drop
 .todo-enter .card-bottom {
 	margin-top: 38px;
 }
