--- a/index-page/homepage.scss
+++ b/index-page/homepage.scss
@@ -21,7 +21,7 @@
 
   .new-board-modial {
     width: 350px;
-    height: 250px;
+    // height: 250px;
     padding: 30px;
     color: #fff;
     position: relative;
