detect enter for new board + margin fix for new list

--- a/index-page/homepage.scss
+++ b/index-page/homepage.scss
@@ -542,6 +542,9 @@ background-color: #ffffff52;
 .new-list {
 	display: none;
 
+  input{
+    margin-bottom: 8px;
+  }
   .add-card-actions{
 
     svg{
