--- a/welcome-page/welcome-style.scss
+++ b/welcome-page/welcome-style.scss
@@ -128,6 +128,11 @@ header {
       font-size: 1.562rem;
       white-space: nowrap;
     }
+    input, button{
+      @media only screen and (max-width: 768px) {
+        width: 100%;
+      }
+    }
   } 
   @media (max-width: 992px){
     h1 {
