--- a/welcome-page/welcome-style.css
+++ b/welcome-page/welcome-style.css
@@ -174,6 +174,9 @@ header nav a.sig-up:hover {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
+  .hero form input[type="email"] {
+    width: 376px;
+  }
   .hero form input[type="submit"] {
     margin-top: 20px;
     width: 376px;
