--- a/welcome-page/welcome-style.scss
+++ b/welcome-page/welcome-style.scss
@@ -145,6 +145,9 @@ header {
     }
     form {
       flex-wrap: wrap;
+      input[type="email"] {
+        width: 376px;
+      }
       input[type="submit"] {
         margin-top: 20px;
         width: 376px;
