--- a/welcome-page/welcome-style.css
+++ b/welcome-page/welcome-style.css
@@ -152,6 +152,10 @@ header nav a.sig-up:hover {
   outline: none;
 }
 
+.hero form input[type="email"] {
+  font-size: 1.2rem;
+}
+
 .hero form button {
   font-size: 1.562rem;
   white-space: nowrap;
@@ -159,7 +163,7 @@ header nav a.sig-up:hover {
 
 @media only screen and (max-width: 768px) {
   .hero form input, .hero form button {
-    width: 100% !important;
+    width: 100%;
   }
 }
 
@@ -182,7 +186,7 @@ header nav a.sig-up:hover {
   }
   .hero form input[type="submit"] {
     margin-top: 20px;
-    width: 376px;
+    width: 100%;
   }
 }
 
@@ -299,6 +303,17 @@ header nav a.sig-up:hover {
   color: #aaa;
   font-size: .9rem;
   margin: 0 0 5px 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .teams .teams-second {
+    text-align: center;
+  }
+}
+
+.teams .teams-second h3 {
+  font-size: 1.75rem;
+  font-weight: 500;
 }
 
 .teams .card-detail-window {
@@ -471,8 +486,9 @@ header nav a.sig-up:hover {
 }
 
 .teams h3 {
-  font-size: 10px;
+  font-size: 14px;
   text-transform: uppercase;
+  font-weight: 700;
 }
 
 .teams h4 {
@@ -672,7 +688,7 @@ header nav a.sig-up:hover {
   border: 7px solid #00C2E0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 991px) {
   .slider {
     display: none;
   }
@@ -698,6 +714,14 @@ header nav a.sig-up:hover {
 
 #features p.small {
   width: 100%;
+  font-size: 88%;
+  font-weight: 400;
+}
+
+@media screen and (max-width: 768px) {
+  #features p {
+    width: 75%;
+  }
 }
 
 #features .btn.btn-wrap {
