--- a/welcome-page/welcome-style.scss
+++ b/welcome-page/welcome-style.scss
@@ -124,6 +124,9 @@ header {
       width: 376px;
       outline: none;
     }
+    input[type="email"] {
+      font-size: 1.2rem;
+    }
     button {
       font-size: 1.562rem;
       white-space: nowrap;
@@ -152,7 +155,7 @@ header {
       flex-wrap: wrap;
       input[type="submit"] {
         margin-top: 20px;
-        width: 376px;
+        width: 100%;
       }
     }
   }
@@ -245,6 +248,16 @@ header {
 }
 // Start Teams 
 .teams {
+  .teams-second{
+    @media screen and (max-width:768px) {
+      text-align: center;
+    }
+    h3{
+      font-size: 1.75rem;
+      font-weight: 500;
+
+    }
+  }
   .card-detail-window {
     background: linear-gradient(6deg, #e6fcff 0%, #fff 100%);
     box-shadow: 0 10px 20px rgba(74, 115, 159, .29);
@@ -356,8 +369,9 @@ header {
     margin-bottom: 6px;
   }
   h3 {
-    font-size: 10px;
+    font-size: 14px;
     text-transform: uppercase;
+    font-weight: 700;
   }
   h4 {
     font-size: 10px;
@@ -481,7 +495,7 @@ header {
       border: 7px solid #00C2E0;
     }
   }
-  @media (max-width: 768px){
+  @media (max-width: 991px){
   
     & {
       display: none;
@@ -503,6 +517,11 @@ header {
     margin-bottom: 1rem;
     &.small {
       width: 100%;
+      font-size: 88%;
+      font-weight: 400;
+    }
+    @media screen and (max-width: 768px) {
+      width: 75%;
     }
   }
   .btn.btn-wrap {
